fixed image width 100% on smaller screens

--- a/style/portfolio-style.css
+++ b/style/portfolio-style.css
@@ -123,7 +123,7 @@ body {
 }
 
 .project-slide {
-	/*width: 100%;*/
+	width: 100%;
 	max-height: 400px;
 	margin: 0 auto;
 
